Fixed text collapsing issues

--- a/erb/app/src/main/resources/textArea.css
+++ b/erb/app/src/main/resources/textArea.css
@@ -9,6 +9,7 @@
 
 .text-area:focused .content {
     -fx-background-color: transparent, transparent, transparent, transparent;
+	-fx-cursor: default ;
 }
 
 .text-area:focused {
